--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 
 
     </label>
-    <input type = "text" id = "guess field"
+    <input type = "text" id = "guessField"
         class = "guess field">
     <input type = "submit" value = "submit guess"
         class = "guess submit" id =  "submit guess">
 </div>
-<script type = "text/javascript" > </script>
-
-
+<script src= "script.js" > </script>
 
 
 </html>
