Added the ouptut for the second game

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html> 
-
+   
 
 <body> 
     <h1> Guessing Game </h1>
-</body>
+
 
 <div class = "form">
     <label for = Guess field > enter a guess: 
@@ -15,7 +15,18 @@
     <input type = "submit" value = "submit guess"
         class = "guess submit" id =  "submit guess">
 </div>
+
+<div class="form">
+
+    <label for = Input field> </label>
+    <input type = "text" id = "inputField">
+      
+    <div id = "output"> 
+        
+    </div>
+</div>
+
+
 <script src= "script.js" > </script>
-
-
+</body>
 </html>
